# pokemon-go-index

./: .gitignore  Makefile  README.md
.github/workflows/: auto_approve.yaml  deploy_app.yaml  visual_regression_test.yaml
frontend/: .env.development  .eslintrc.json  .firebaserc  .gitignore  Makefile  firebase.json  firebaseFunctions.js  firestore.rules  next.config.js  package-lock.json  package.json  plopfile.js  regconfig.json  tsconfig.json
frontend/.data/auth_export/: accounts.json
frontend/.data/firestore_export/: firestore_export.overall_export_metadata
frontend/.data/firestore_export/all_namespaces/: 2024-05-26T15:40:57_29182.overall_export_metadata
frontend/.storybook/: main.ts  preview.ts  webpack.config.js
frontend/plop-templates/component/: component.stories.tsx.hbs  component.tsx.hbs
frontend/public/images/: .gitignore  hash.txt  tree.txt
frontend/src/: const.tsx
frontend/src/components/projects/: Icon.tsx  MenuBar.tsx  PokemonSelectBox.tsx  RegionSelect.tsx
frontend/src/components/uiParts/: Circle.tsx  EditModal.tsx  Select.tsx  Toast.tsx  ToggleButton.tsx  ToggleIconButton.tsx
frontend/src/features/events/: index.ts
frontend/src/infra/: event.ts  fieldResearch.ts  firebase.ts  pokemon.ts  rockets.ts  users.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: theme.tsx
frontend/src/utils/: config.ts  hiraToKata.ts
generate_data/: Makefile  Untitled-1.ipynb  generate_image.py  pyproject.toml  tree.txt
generate_data/src/: main.py  models.py  pogo_api.py
test/my-package/: pyproject.toml
(+121 files in other folders)
